// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pokemon index component > must match the snapshot 1`] = `
"<div class=\\"relative w-full h-[80vh] md:h-screen bg-cover bg-[url(@/assets/pokemon-game/background.png)] transform -translate-y-36\\">
  <pokemon-picture-stub pokemonid=\\"0\\" showpokemon=\\"false\\" defaultpath=\\"https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/\\" class=\\"absolute left-28 top-64 md:left-56 md:top-56 xl:left-1/4 xl:top-1/3\\"></pokemon-picture-stub>
  <game-notifications-stub message=\\"Who is that pokemon?\\" won=\\"false\\" showanswer=\\"false\\"></game-notifications-stub>
</div>
<div class=\\"-mt-36\\">
  <pokemon-options-stub options=\\"\\" disabled=\\"false\\"></pokemon-options-stub>
</div>"
`;

exports[`Pokemon index component > should match the snapshot when pokemons are loaded 1`] = `
"<div class=\\"relative w-full h-[80vh] md:h-screen bg-cover bg-[url(@/assets/pokemon-game/background.png)] transform -translate-y-36\\">
  <div data-v-de2a09f6=\\"\\" class=\\"absolute left-28 top-64 md:left-56 md:top-56 xl:left-1/4 xl:top-1/3\\"><img data-v-de2a09f6=\\"\\" src=\\"https://upload.wikimedia.org/wikipedia/commons/3/3b/MissingNo.svg\\" alt=\\"\`Pokemon ?\`\\" class=\\"hidden-pokemon\\" style=\\"display: none;\\"><!-- <button @click=\\"toggleReveal\\">Toggle Hide</button> -->
  </div>
  <div class=\\"absolute top-36 right-12 md:right-36 md:top-1/3 xl:right-24 xl:top-1/3 2xl:right-1/4 2xl:w-96 2xl:h-96\\">
    <!--v-if-->
  </div>
</div>
<div class=\\"-mt-36\\">
  <div data-v-6c7a75d2=\\"\\" class=\\"bg-black opacity-80\\">
    <div data-v-6c7a75d2=\\"\\" class=\\"flex items-center mx-auto justify-center max-w-[800px]\\">
      <ul data-v-6c7a75d2=\\"\\" class=\\"flex-wrap justify-center py-6 text-blue-700 list-none md:flex\\"></ul>
    </div>
  </div>
</div>"
`;
